3-ossm-networking/route-bookinfo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  host: bookinfo.$EXTERNAL_DOMAIN
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
